--- a/Assets/UI Toolkit/Title.uss
+++ b/Assets/UI Toolkit/Title.uss
@@ -13,20 +13,24 @@
     border-right-width: 2px;
     border-bottom-width: 2px;
     border-left-width: 2px;
-    font-size: 80px;
+    font-size: 75px;
     -unity-font-style: bold;
     color: rgb(255, 255, 255);
     -unity-text-outline-width: 2px;
     -unity-text-outline-color: rgb(0, 0, 0);
     letter-spacing: 0;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0);
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
     margin-top: 20px;
     margin-right: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
+    background-image: url("project://database/Assets/02.Textures/Wood.jpg?fileID=21300000&guid=e81e43c7e62f06c43b7c1027ff63fd85&type=3#Wood");
+    transition-duration: 0.4s;
 }
 
 .btn:hover {
     background-color: rgb(152, 152, 152);
-    color: rgb(219, 219, 219);
+    -unity-background-image-tint-color: rgb(176, 123, 69);
+    color: rgb(154, 154, 154);
+    -unity-font-style: bold;
 }
