--- a/Assets/UI Toolkit/Title.uxml
+++ b/Assets/UI Toolkit/Title.uxml
@@ -1,11 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/Title.uss?fileID=7433441132597879392&amp;guid=7e6893137f7285549ac5c7d337b24232&amp;type=3#Title" />
     <ui:VisualElement name="Container" style="flex-grow: 1; background-color: rgba(255, 255, 255, 0);">
-        <ui:Label tabindex="-1" text="0까기" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Title" style="font-size: 200px; -unity-font-style: bold; -unity-text-align: upper-center; -unity-text-outline-color: rgb(0, 0, 0); -unity-text-outline-width: 3px; color: rgb(255, 255, 255);" />
+        <ui:Label tabindex="-1" text="0까기" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Title" style="font-size: 200px; -unity-font-style: bold; -unity-text-align: upper-center; -unity-text-outline-color: rgb(0, 0, 0); -unity-text-outline-width: 5px; color: rgb(233, 213, 186); -unity-font: initial;" />
         <ui:VisualElement name="Cotainer-btn" style="flex-grow: 1; align-items: center; justify-content: center; flex-direction: row;">
             <ui:Button text="게임시작 " parse-escape-sequences="true" display-tooltip-when-elided="true" name="startBtn" class="btn" />
-            <ui:Button text="설정 " parse-escape-sequences="true" display-tooltip-when-elided="true" name="settingBtn" class="btn" />
-            <ui:Button text="나가기 " parse-escape-sequences="true" display-tooltip-when-elided="true" name="exitBtn" class="btn" />
+            <ui:Button text="도망가기 " parse-escape-sequences="true" display-tooltip-when-elided="true" name="exitBtn" class="btn" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
